add endpoint to evict search result cache
