# src/main/scala/htw/ai/p2p/speechsearch/api/searches/SearchService.scala
@@ -4,17 +4,12 @@ import cats.Parallel
 import cats.data.OptionT
 import cats.effect._
 import cats.implicits._
+import htw.ai.p2p.speechsearch.domain.core.Searcher
 import htw.ai.p2p.speechsearch.domain.core.invertedindex.InvertedIndex
-import htw.ai.p2p.speechsearch.domain.core.invertedindex.InvertedIndex._
-import htw.ai.p2p.speechsearch.domain.core.model.result.{ResultEntry, SearchResult}
+import htw.ai.p2p.speechsearch.domain.core.model.result.SearchResult
 import htw.ai.p2p.speechsearch.domain.core.model.search.Search
-import htw.ai.p2p.speechsearch.domain.core.{BackgroundTask, Searcher, Tokenizer}
 import htw.ai.p2p.speechsearch.domain.lru.{LruCache, LruRef}
 import io.chrisdavenport.log4cats.Logger
-import retry.Sleep
-
-import java.time.{Instant, LocalDateTime, ZoneId}
-import scala.concurrent.duration.{DurationInt, FiniteDuration, MILLISECONDS}
 
 /**
  * @author Joscha Seelig <jduesentrieb> 2021
@@ -22,6 +17,8 @@ import scala.concurrent.duration.{DurationInt, FiniteDuration, MILLISECONDS}
 trait SearchService[F[_]] {
 
   def create(search: PaginatedSearch): F[SearchResult]
+
+  def evictCache: F[Set[Search]]
 
 }
 
@@ -36,6 +33,8 @@ object SearchService {
     ii: InvertedIndex[F],
     cacheRef: LruRef[F, Search, SearchResult]
   ): SearchService[F] = new SearchService[F] {
+
+    override def evictCache: F[Set[Search]] = cacheRef.clear
 
     override def create(search: PaginatedSearch): F[SearchResult] =
       OptionT(cacheRef.get(search.search))
